--- a/app/src/main/res/values-pt/strings_state.xml
+++ b/app/src/main/res/values-pt/strings_state.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="printer_state_octo_disconnected">Offline</string>
-    <string name="printer_state_disconnected">Desconectada</string>
-    <string name="printer_state_connecting">Conectando&#8230;</string>
+    <string name="printer_state_octo_disconnected">Servidor não conectado</string>
+    <string name="printer_state_disconnected">Impressora desconectada</string>
+    <string name="printer_state_connecting">Conectando impressora&#8230;</string>
     <string name="printer_state_sending_file">Enviando arquivo…</string>
     <string name="printer_state_ready">Pronta para imprimir</string>
     <string name="printer_state_paused">Impressão pausada</string>
