--- a/app/src/main/res/values/strings_state.xml
+++ b/app/src/main/res/values/strings_state.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="printer_state_octo_disconnected">Offline</string>
-    <string name="printer_state_disconnected">Disconnected</string>
-    <string name="printer_state_connecting">Connecting&#8230;</string>
+    <string name="printer_state_octo_disconnected">Server not connected</string>
+    <string name="printer_state_disconnected">Printer disconnected</string>
+    <string name="printer_state_connecting">Connecting printer&#8230;</string>
     <string name="printer_state_sending_file">Sending file…</string>
     <string name="printer_state_ready">Ready to print</string>
     <string name="printer_state_paused">Print paused</string>
