--- a/app/src/main/res/values-nl/strings_onboarding.xml
+++ b/app/src/main/res/values-nl/strings_onboarding.xml
@@ -31,6 +31,11 @@
     <string name="onboarding_baudrate_message">Geef de baudrate op om de verbinding met uw 3D-printer tot stand te brengen.\n
         Dit kan eenvoudig worden gewijzigd als er meer dan één 3D-printer is aangesloten.</string>
 
+    <string name="onboarding_credentials_title">OctoPrint-inloggegevens (optioneel)</string>
+    <string name="onboarding_credentials_message">Start de interface op en toon informatie sneller! Geef aan Printoid de inloggegevens die u gebruikt om in te loggen in uw OctoPrint webapp. Het is optioneel, maar wordt aangemoedigd, vooral om de terminal en de lijst met plug-ins te voeden (het is een vereiste voor OctoPrint sinds versie 1.3.10).</string>
+    <string name="onboarding_credentials_login_error">Geef uw OctoPrint-login op</string>
+    <string name="onboarding_credentials_password_error">Geef uw OctoPrint-wachtwoord op</string>
+
     <string name="onboarding_security_title">Beveiliging (optioneel)</string>
     <string name="onboarding_security_message_basic_auth"><![CDATA[Geef uw basisauthenticatiegegevens op als u deze functie op uw server hebt ingeschakeld.\n
         <a href="https://printoid.net/access-octoprint-from-the-internet/">Lees deze pagina </a> voor meer informatie.]]></string>
