--- a/app/src/main/res/values-ru/strings_onboarding.xml
+++ b/app/src/main/res/values-ru/strings_onboarding.xml
@@ -31,6 +31,11 @@
     <string name="onboarding_baudrate_message">Чтобы создать экземпляр соединения с вашим 3D-принтером, укажите его скорость передачи.\n
         Это можно легко изменить, если у вас подключено более одного 3D-принтера.</string>
 
+    <string name="onboarding_credentials_title">Учетные данные OctoPrint (необязательно)</string>
+    <string name="onboarding_credentials_message">Включите интерфейс и покажите информацию быстрее! Предоставьте Printoid учетные данные, которые вы используете для входа в веб-приложение OctoPrint. Это необязательно, но рекомендуется, особенно для загрузки терминала и списка плагинов (это требование OctoPrint начиная с версии 1.3.10).</string>
+    <string name="onboarding_credentials_login_error">Пожалуйста, укажите ваш логин OctoPrint</string>
+    <string name="onboarding_credentials_password_error">Пожалуйста, укажите ваш пароль OctoPrint</string>
+
     <string name="onboarding_security_title">Безопасность (необязательно)</string>
     <string name="onboarding_security_message_basic_auth"><![CDATA[Укажите свои учетные данные для базовой аутентификации, если вы включили эту функцию на своем сервере.\n
         <a href="https://printoid.net/access-octoprint-from-the-internet/">Прочтите эту страницу </a> для получения дополнительной информации.]]></string>
